[metadata]
name = acre-radish
version = 0.0.1
description='invoke radish runs inside docker '

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish
    git+https://github.com/realtimeprojects/acre-lib.git

[options.entry_points]
console_scripts =
    run-radish = acre.radish.main:main

[wheel]
universal=1
