[metadata]
name = acre-radish
version = 0.0.1
description='invoke radish runs inside docker '

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd
    acre-lib

[options.entry_points]
console_scripts =
    run-radish = acre.radishrun.main:main

[wheel]
universal=1
